--- a/app/static/css/custom.css
+++ b/app/static/css/custom.css
@@ -51,8 +51,10 @@
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 html, body {
     height: 100%;
+    text-rendering: optimizeLegibility;
 }
 body {
+    font-size: 1.6rem;
     color: #161310;
     padding-top: 6.5rem;
 }
@@ -75,10 +77,8 @@ a:hover {
 /* Alerts 
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 .flash {
-    /* 
     border: 1px solid;
-    border-radius: 4px; 
-    */
+    /* border-radius: 4px; */
     display: block;
     padding: 15px;
     margin-bottom: 20px;
@@ -343,6 +343,7 @@ h2 span {
     line-height: 1.8;
     height: 2.5rem;
     text-decoration: none;
+    font-size: 1.5rem;
 }
 .nav-tabs > li > a:hover
 .nav-stacked > li > a:hover {
