--- a/app/templates/styleguide/modals.html
+++ b/app/templates/styleguide/modals.html
@@ -9,31 +9,32 @@
 {% from "helpers/navigation.html" import render_styleguide_nav, render_scrollspy %}
 {% from "helpers/styleguide.html" import render_header %}
 {% from "helpers/modals.html" import render_modal %}
-<div class="row">
-    {{ render_header(title, version) }}
-</div>
-<hr class="u-remove-margin-bottom">
-<div class="row">
-    <div class="twelve columns">
-        {{ render_styleguide_nav(active_page) }}
+<div class="container">
+    <div class="row">
+        {{ render_header(title, version) }}
     </div>
-</div>
-<div class="row u-add-margin-top">
-    <div class="nine columns">
+    <hr class="u-remove-margin-bottom">
+    <div class="row">
+        <div class="twelve columns">
+            {{ render_styleguide_nav(active_page) }}
+        </div>
+    </div>
+    <div class="row u-add-margin-top">
+        <div class="nine columns">
 
-        <h2>Modals</h2>
-        <p>Modals are dialog boxes that are displayed on top of normal content. Click on the button below to view a demo modal.</p>
-        <p>{{ render_modal('modal-demo', 'Modal Demo', 'Modal demo content', 'Click here to see a modal', 'button') }}</p>
-        <p><strong>Note:</strong> using modals breaks accessability. That is: screen readers will not interpret them correctly.</p>
-        <hr>
-        <p>You can either render modals manually or <a href="{{ url_for('styleguide.templating') }}#modal-helpers">use the included macro</a>. Below is an example manual implementation. First, import <code>modal.js</code> file inside <code>&#123;&#37; block scripts &#37;&#125;</code>.</p>
-        <pre>
+            <h2>Modals</h2>
+            <p>Modals are dialog boxes that are displayed on top of normal content. Click on the button below to view a demo modal.</p>
+            <p>{{ render_modal('modal-demo', 'Modal Demo', 'Modal demo content', 'Click here to see a modal', 'button') }}</p>
+            <p><strong>Note:</strong> using modals breaks accessability. That is: screen readers will not interpret them correctly.</p>
+            <hr>
+            <p>You can either render modals manually or <a href="{{ url_for('styleguide.templating') }}#modal-helpers">use the included macro</a>. Below is an example manual implementation. First, import <code>modal.js</code> file inside <code>&#123;&#37; block scripts &#37;&#125;</code>.</p>
+            <pre>
 &lt;script src="&#123;&#123; url_for('static', filename='js/modal.js') &#125;&#125;"&gt;&lt;/script&gt;</pre>
-        <p>Then, somewhere inside <code>&#123;&#37; block content &#37;&#125;</code>, create a button like so:</p>
-        <pre>
+            <p>Then, somewhere inside <code>&#123;&#37; block content &#37;&#125;</code>, create a button like so:</p>
+            <pre>
 &lt;a class="button button-modal" data-target="modal-demo"&gt;Modal Demo&lt;/a&gt;</pre>
-        <p>The modal itself is always hidden by default and you can put it anywhere inside <code>&lt;body&gt;</code>. Note that trigger button's <code>data-target</code> parameter and modal's <code>id</code> match up. This is so the script knows which button triggers which modal.</p>
-        <pre>
+            <p>The modal itself is always hidden by default and you can put it anywhere inside <code>&lt;body&gt;</code>. Note that trigger button's <code>data-target</code> parameter and modal's <code>id</code> match up. This is so the script knows which button triggers which modal.</p>
+            <pre>
 &lt;div id="modal-demo" class="modal"&gt;
     &lt;div&gt;
         &lt;h3 class="u-pull-left"&gt;Modal Demo&lt;/h3&gt;
@@ -44,6 +45,7 @@
     &lt;/div&gt;
 &lt;/div&gt;</pre>
 
+        </div>
     </div>
 </div>
 {% endblock %}
