--- a/app/templates/styleguide/tables.html
+++ b/app/templates/styleguide/tables.html
@@ -7,48 +7,49 @@
 {% block content %}
 {% from "helpers/navigation.html" import render_styleguide_nav, render_scrollspy %}
 {% from "helpers/styleguide.html" import render_header %}
-<div class="row">
-    {{ render_header(title, version) }}
-</div>
-<hr class="u-remove-margin-bottom">
-<div class="row">
-    <div class="twelve columns">
-        {{ render_styleguide_nav(active_page) }}
+<div class="container">
+    <div class="row">
+        {{ render_header(title, version) }}
     </div>
-</div>
-<div class="row u-add-margin-top">
-    <div class="nine columns">
+    <hr class="u-remove-margin-bottom">
+    <div class="row">
+        <div class="twelve columns">
+            {{ render_styleguide_nav(active_page) }}
+        </div>
+    </div>
+    <div class="row u-add-margin-top">
+        <div class="nine columns">
 
-        <h2>Tables</h2>
-        <p>For now there's only basic table styling borrowed directly from Skeleton.</p>
+            <h2>Tables</h2>
+            <p>For now there's only basic table styling borrowed directly from Skeleton.</p>
 
-        <table class="u-full-width">
-            <thead>
-                <tr>
-                    <th>Text</th>
-                    <th>Number</th>
-                    <th>Link</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>Demo Entry</td>
-                    <td>32</td>
-                    <td><a href="#">Demo Link</a></td>
-                </tr>
-                <tr>
-                    <td>Another Demo Entry</td>
-                    <td>64</td>
-                    <td><a href="#">Another Demo Link</a></td>
-                </tr>
-                <tr>
-                    <td>Test</td>
-                    <td>128</td>
-                    <td><a href="#">Test</a></td>
-                </tr>
-            </tbody>
-        </table>
-        <pre>
+            <table class="u-full-width">
+                <thead>
+                    <tr>
+                        <th>Text</th>
+                        <th>Number</th>
+                        <th>Link</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Demo Entry</td>
+                        <td>32</td>
+                        <td><a href="#">Demo Link</a></td>
+                    </tr>
+                    <tr>
+                        <td>Another Demo Entry</td>
+                        <td>64</td>
+                        <td><a href="#">Another Demo Link</a></td>
+                    </tr>
+                    <tr>
+                        <td>Test</td>
+                        <td>128</td>
+                        <td><a href="#">Test</a></td>
+                    </tr>
+                </tbody>
+            </table>
+            <pre>
 &lt;table class="u-full-width"&gt;
     &lt;thead&gt;
         &lt;tr&gt;
@@ -76,7 +77,8 @@
     &lt;/tbody&gt;
 &lt;/table&gt;</pre>
 
-    </div>
+        </div>
 
-</div>
+    </div>
+<div>
 {% endblock %}
