Link to support actions should work now

--- a/app/templates/causes/cause.html
+++ b/app/templates/causes/cause.html
@@ -54,7 +54,7 @@ $('#stand-with-us').click(function() {
     <hr>
     <div class="row">
         <div class="nine columns">
-            <h3 name="actions">
+            <h3 id="actions">
                 Take action to win
                 <span>({{ cause.actions.count() }} current)</span>
             </h3>
